--- a/pandoc-linear-table.cabal
+++ b/pandoc-linear-table.cabal
@@ -11,7 +11,7 @@ copyright:          2020-2021 Amy de Buitléir
 category:           Text
 extra-source-files: CHANGELOG.md
 
-executable pandoc-linear-tables
+executable pandoc-linear-table
   default-language: Haskell2010
   main-is:        LinearTable.hs
   build-depends:
