--- a/pandoc-linear-table.cabal
+++ b/pandoc-linear-table.cabal
@@ -1,8 +1,8 @@
 cabal-version:      2.4
 name:               pandoc-linear-table
-version:            0.1.0.0
-description:           A lazy way to wrap text in tables.
-synopsis:           A lazy way to wrap text in tables.
+version:            0.2.0.0
+description:        An easy way to wrap text in tables.
+synopsis:           An easy way to wrap text in tables.
 license:            BSD-3-Clause
 license-file:       LICENSE
 author:             Amy de Buitléir
@@ -11,13 +11,24 @@ copyright:          2020-2021 Amy de Buitléir
 category:           Text
 extra-source-files: CHANGELOG.md
 
+library
+  hs-source-dirs:   src
+  exposed-modules:
+    Text.Pandoc.Filters.LinearTable
+  ghc-options:      -Wall -Wunused-packages
+  build-depends:
+    base,
+    pandoc,
+    text,
+    pandoc-types
+  
 executable pandoc-linear-table
   default-language: Haskell2010
-  main-is:        LinearTable.hs
+  hs-source-dirs:   app
+  main-is:          Main.hs
   build-depends:
-    base                              >= 4.14.3 && < 4.15,
-    pandoc                            >= 2.14.0 && < 2.15,
-    text                              >= 1.2.4 && < 1.3,
-    pandoc-types                      >= 1.22.1 && < 1.23,
+    base,
+    pandoc-linear-table,
+    pandoc-types
   ghc-options:
     -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages
