--- a/pandoc-linear-table.cabal
+++ b/pandoc-linear-table.cabal
@@ -7,7 +7,7 @@ license:            BSD-3-Clause
 license-file:       LICENSE
 author:             Amy de Buitléir
 maintainer:         amy@nualeargais.ie
-copyright:          2020-2021 Amy de Buitléir
+copyright:          2020-2022 Amy de Buitléir
 category:           Text
 extra-source-files: CHANGELOG.md
 
@@ -15,20 +15,20 @@ library
   hs-source-dirs:   src
   exposed-modules:
     Text.Pandoc.Filters.LinearTable
-  ghc-options:      -Wall -Wunused-packages
   build-depends:
-    base,
-    pandoc,
-    text,
-    pandoc-types
+    base                              >= 4.12 && < 4.15,
+    pandoc                            >= 2.14 && < 2.15,
+    text                              >= 1.1 && < 1.3,
+    pandoc-types                      >= 1.22 && < 1.23,
+  ghc-options:      -Wall -Wunused-packages
   
 executable pandoc-linear-table
   default-language: Haskell2010
   hs-source-dirs:   app
   main-is:          Main.hs
   build-depends:
-    base,
+    base                              >= 4.12 && < 4.15,
     pandoc-linear-table,
-    pandoc-types
+    pandoc-types                      >= 1.22 && < 1.23,
   ghc-options:
     -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages
