--- a/pandoc-linear-table.cabal
+++ b/pandoc-linear-table.cabal
@@ -1,8 +1,8 @@
 cabal-version:      2.4
 name:               pandoc-linear-table
-version:            0.2.0.2
-description:        An easy way to wrap text in tables.
-synopsis:           An easy way to wrap text in tables.
+version:            0.2.0.3
+description:        Pandoc filter that makes it easier to wrap text in tables in Markdown.
+synopsis:           A pandoc filter that provides a Markdown extension that supports text wrapping in table cells.
 license:            BSD-3-Clause
 license-file:       LICENSE
 author:             Amy de Buitléir
@@ -11,25 +11,31 @@ copyright:          2020-2022 Amy de Buitléir
 category:           Text
 extra-source-files: CHANGELOG.md
 
+source-repository head
+  type:              git
+  location:          https://github.com/mhwombat/pandoc-linear-table.git
+
+common common-stuff
+  default-language: Haskell2010
+  build-depends:
+    base >= 4.15.1 && < 4.16,
+    pandoc-types >= 1.22.2 && < 1.23,
+
 library
+  import:           common-stuff
   hs-source-dirs:   src
   exposed-modules:
     Text.Pandoc.Filters.LinearTable
   build-depends:
-    base                               >= 4.15.1 && < 4.17,
-    pandoc                             >= 2.17.1 && < 2.18,
-    text                               >= 1.2.5 && < 1.3,
-    pandoc-types                       >= 1.22.1 && < 1.23,
+    pandoc >= 2.17.1 && < 2.18,
+    text >= 1.2.5 && < 1.3,
   ghc-options:      -Wall -Wunused-packages
-  default-language: Haskell2010
-  
+
 executable pandoc-linear-table
+  import:           common-stuff
   hs-source-dirs:   app
   main-is:          Main.hs
   build-depends:
-    base                               >= 4.15.1 && < 4.17,
     pandoc-linear-table,
-    pandoc-types                       >= 1.22.1 && < 1.23,
   ghc-options:
     -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages
-  default-language: Haskell2010
