--- a/pandoc-linear-table.cabal
+++ b/pandoc-linear-table.cabal
@@ -1,4 +1,4 @@
-cabal-version:      2.4
+cabal-version:      3.0
 name:               pandoc-linear-table
 version:            0.2.0.3
 description:        Pandoc filter that makes it easier to wrap text in tables in Markdown.
@@ -9,33 +9,37 @@ author:             Amy de Buitléir
 maintainer:         amy@nualeargais.ie
 copyright:          2020-2022 Amy de Buitléir
 category:           Text
-extra-source-files: CHANGELOG.md
+build-type:         Simple
+extra-doc-files:    CHANGELOG.md
 
 source-repository head
   type:              git
   location:          https://github.com/mhwombat/pandoc-linear-table.git
 
+common warnings
+    ghc-options: -Wall  -Wunused-packages
+
 common common-stuff
   default-language: Haskell2010
+  default-extensions: ImportQualifiedPost
   build-depends:
-    base >= 4.15.1 && < 4.16,
+    base ^>=4.15.1.0,
     pandoc-types >= 1.22.2 && < 1.23,
 
 library
-  import:           common-stuff
+  import:           warnings, common-stuff
   hs-source-dirs:   src
   exposed-modules:
     Text.Pandoc.Filters.LinearTable
   build-depends:
     pandoc >= 2.17.1 && < 2.18,
     text >= 1.2.5 && < 1.3,
-  ghc-options:      -Wall -Wunused-packages
 
 executable pandoc-linear-table
-  import:           common-stuff
-  hs-source-dirs:   app
-  main-is:          Main.hs
-  build-depends:
-    pandoc-linear-table,
-  ghc-options:
-    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages
+    import:           warnings, common-stuff
+    hs-source-dirs:   app
+    main-is:          Main.hs
+    build-depends:
+        base ^>=4.15.1.0,
+        pandoc-linear-table
+
