--- a/pandoc-linear-table.cabal
+++ b/pandoc-linear-table.cabal
@@ -1,18 +1,21 @@
-cabal-version:      3.0
-name:               pandoc-linear-table
-version:            0.2.0.4
-description:        Pandoc filter that makes it easier to wrap text in tables in Markdown.
+cabal-version:   3.0
+name:            pandoc-linear-table
+version:         0.2.0.5
 synopsis:
-    Pandoc filter that provides a Markdown extension that supports text wrapping in table cells.
-homepage:           https://github.com/mhwombat/pandoc-linear-table
-license:            BSD-3-Clause
-license-file:       LICENSE
-author:             Amy de Buitléir
-maintainer:         amy@nualeargais.ie
-copyright:          2020-2022 Amy de Buitléir
-category:           Text
-build-type:         Simple
-extra-doc-files:    CHANGELOG.md
+    A pandoc filter that provides a Markdown extension that supports text wrapping in table cells.
+description:
+  For more information and a tutorial on how to use this package,
+  please see the README at <https://github.com/mhwombat/pandoc-linear-table#readme>.
+homepage:        https://github.com/mhwombat/pandoc-linear-table
+bug-reports:     https://github.com/mhwombat/pandoc-linear-table/issues
+license:         BSD-3-Clause
+license-file:    LICENSE
+author:          Amy de Buitléir
+maintainer:      amy@nualeargais.ie
+copyright:       (c) 2020-2023 Amy de Buitléir
+category:        Text
+build-type:      Simple
+extra-doc-files: CHANGELOG.md
 
 source-repository head
   type:              git
@@ -22,7 +25,7 @@ common common-stuff
   default-language: Haskell2010
   default-extensions: ImportQualifiedPost
   build-depends:
-    base >= 4.16.3 && < 4.17,
+    base >= 4.16.4 && < 4.17,
     pandoc-types >= 1.22.2 && < 1.23
   ghc-options: -Wall  -Wunused-packages
 
@@ -36,9 +39,9 @@ library
     text >= 1.2.5 && < 1.3
 
 executable pandoc-linear-table
-    import:           common-stuff
-    hs-source-dirs:   app
-    main-is:          Main.hs
-    build-depends:
-        pandoc-linear-table
+  import:           common-stuff
+  hs-source-dirs:   app
+  main-is:          Main.hs
+  build-depends:
+      pandoc-linear-table
 
