--- a/pandoc-linear-table.cabal
+++ b/pandoc-linear-table.cabal
@@ -25,8 +25,8 @@ common common-stuff
   default-language: Haskell2010
   default-extensions: ImportQualifiedPost
   build-depends:
-    base >= 4.16.4 && < 4.17,
-    pandoc-types >= 1.22.2 && < 1.23
+    base,
+    pandoc-types
   ghc-options: -Wall  -Wunused-packages
 
 library
@@ -35,8 +35,8 @@ library
   exposed-modules:
     Text.Pandoc.Filters.LinearTable
   build-depends:
-    pandoc >= 2.19.2 && < 2.20,
-    text >= 1.2.5 && < 1.3
+    pandoc,
+    text
 
 executable pandoc-linear-table
   import:           common-stuff
