--- a/pandoc-linear-table.cabal
+++ b/pandoc-linear-table.cabal
@@ -25,8 +25,8 @@ common common-stuff
   default-language: Haskell2010
   default-extensions: ImportQualifiedPost
   build-depends:
-    base,
-    pandoc-types
+    base >= 4.17.2 && < 4.18,
+    pandoc-types >= 1.23.1 && < 1.24
   ghc-options: -Wall  -Wunused-packages
 
 library
@@ -35,8 +35,8 @@ library
   exposed-modules:
     Text.Pandoc.Filters.LinearTable
   build-depends:
-    pandoc,
-    text
+    pandoc >= 3.0.1 && < 3.1,
+    text >= 2.0.2 && < 2.1
 
 executable pandoc-linear-table
   import:           common-stuff
